--- a/client/imports/app/app.scss
+++ b/client/imports/app/app.scss
@@ -3,6 +3,7 @@
 // Global styles
 html, body {
     height: 100%;
+    margin: 0px;
 }
 
 body.no-scroll {
